--- a/package.json
+++ b/package.json
@@ -1,15 +1,43 @@
 {
-  "name": "eoo-test",
+  "name": "@vicentecalfo/eoo-aoo-calc",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "AOO (Area of Occupancy) and EOO (Extent of Occurrence) calculator tool.",
+  "main": "dist/index.js",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
   },
-  "author": "",
+  "scripts": {
+    "build": "tsc",
+    "dev": "ts-node-dev src/index.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vicentecalfo/eoo-aoo-calculator.git"
+  },
+  "author": "Vicente Calfo <vicentecalfo@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/vicentecalfo/eoo-aoo-calculator/issues"
+  },
+  "homepage": "https://github.com/vicentecalfo/eoo-aoo-calculator/#readme",
+  "keywords": [
+    "botanic",
+    "eoo",
+    "aoo",
+    "Area of Occupancy",
+    "Extent of Occurrence",
+    "iucn",
+    "red list"
+  ],
   "license": "ISC",
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "underscore": "^1.13.6"
+  },
+  "devDependencies": {
+    "@types/node": "^18.8.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.4"
   }
 }
