--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/cli.ts"
   },
   "repository": {
     "type": "git",
@@ -35,13 +35,20 @@
   "license": "ISC",
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "commander": "^9.4.1",
+    "csvtojson": "^2.0.10",
     "underscore": "^1.13.6",
-    "user": "^0.0.0"
+    "user": "^0.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.8.2",
+    "@types/node": "^18.8.3",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
+  },
+  "bin": {
+    "eoo-aoo-calc": "dist/cli.js"
   }
 }
