--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vicentecalfo/eoo-aoo-calc",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "AOO (Area of Occupancy) and EOO (Extent of Occurrence) calculator tool.",
   "main": "dist/index.js",
   "private": false,
@@ -37,11 +37,13 @@
     "@turf/turf": "^6.5.0",
     "commander": "^9.4.1",
     "csvtojson": "^2.0.10",
+    "html-minifier": "^4.0.0",
     "underscore": "^1.13.6",
     "user": "^0.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/html-minifier": "^4.0.2",
     "@types/node": "^18.8.3",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
