--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vicentecalfo/eoo-aoo-calc",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "AOO (Area of Occupancy) and EOO (Extent of Occurrence) calculator tool.",
   "main": "dist/index.js",
   "private": false,
@@ -37,6 +37,7 @@
     "@turf/turf": "^6.5.0",
     "commander": "^9.4.1",
     "csvtojson": "^2.0.10",
+    "fs-extra": "^10.1.0",
     "geojson2shp": "^0.5.0",
     "html-minifier": "^4.0.0",
     "underscore": "^1.13.6",
@@ -44,6 +45,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/html-minifier": "^4.0.2",
     "@types/node": "^18.8.3",
     "@types/uuid": "^8.3.4",
